View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028677 | Open CASCADE | OCCT:Modeling Algorithms | public | 2017-04-24 13:09 | 2021-08-18 19:36 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028677: Avoid change of wire orientation in BRepLib_MakeFace if the wire is open | ||||
Description | BRepLib_MakeFace does not allow to create a face as hole. I.e. if source closed wire has orientation that the material of future face is outside then this wire will be reversed by the method BRepLib_MakeFace::CheckInside(). However, it is impossible for open wire to understand where (from what side) the material of future face will be located. Therefore, there is no point in executing BRepLib_MakeFace::CheckInside() method. In this case, location of material will be determined from the orientation of the wire (the source wire must be oriented correctly). If we go along the wire, the material will be on the left side. | ||||
Steps To Reproduce | New test case is not required. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28677 has been created by nbv. SHA-1: a4ed1a7d8207097b9b25f144b4c233e285374cd7 Detailed log of new commits: Author: nbv Date: Mon Apr 24 13:48:28 2017 +0300 0028677: Avoid change of wire orientation in BRepLib_MakeFace if the wire is open Method BRepLib_MakeFace::CheckInside() is not called for open wire. |
|
Dear Mikhail, Please review CR28677 branch. |
|
Branch CR28677 has been updated forcibly by nbv. SHA-1: 2295bd6cf48208e14863b2215eacf902e8af02d6 |
|
Reviewed. |
|
Dear BugMaster, Branch CR28677 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 2295bd6cf48208e14863b2215eacf902e8af02d6 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1178 Regressions/Differences: http://occt-tests/CR28677-master-OCCT/Debian70-64/summary.html http://occt-tests/CR28677-master-OCCT/Windows-64-VC10/summary.html bugs modalg_5 bug25298_01, bug25298_02, bug25334_3, bug25334_4, bug25334_9, bug25334_10 bugs modalg_6 bug6768, bug26296_5 offset wire_unclosed_outside_0_005 B6 offset wire_unclosed_outside_0_025 B6 offset wire_unclosed_outside_0_075 A1, B6 Testing cases: Not needed Testing on Linux: Total MEMORY difference: 92018184 / 91849822 [+0.18%] Total CPU difference: 19461.660000000236 / 19556.190000000326 [-0.48%] Testing on Windows: Total MEMORY difference: 58033693 / 58034445 [-0.00%] Total CPU difference: 18135.25665089857 / 18123.182173498568 [+0.07%] There are differences in images found by testdiff: http://occt-tests/CR28677-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR28677-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html bugs moddata_1 bug20823 bugs modalg_5 bug25298_02 bugs modalg_5 bug25298_01 bugs modalg_5 bug25334_3 bugs modalg_5 bug25334_9 bugs modalg_5 bug25334_4 bugs modalg_5 bug25334_10 bugs modalg_6 bug26296_5 bugs modalg_6 bug26481 |
|
Dear Nikolay, Branch CR28677 has been rejected due to: - regressions/differences/improvements - differences in images |
|
Branch CR28677 has been updated by nbv. SHA-1: 5b3699f1ac0e78cb9ece87063ab0b504d8879c9e Detailed log of new commits: Author: nbv Date: Tue Apr 25 15:57:12 2017 +0300 Correction of test cases Documentation has been up-to-date. |
|
Dear Mikhail, Please review the current state of CR28677 branch. |
|
Branch CR28677 has been updated by nbv. SHA-1: a2612823265feaac6d60b7e12df458fb3a95b86e Detailed log of new commits: Author: nbv Date: Wed Apr 26 11:56:19 2017 +0300 Correction in comment message. |
|
Reviewed. |
|
Dear BugMaster, Branch CR28677 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: a2612823265feaac6d60b7e12df458fb3a95b86e Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1184 Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 91587979 / 92245620 [-0.71%] Total CPU difference: 19409.840000000208 / 19589.860000000295 [-0.92%] Testing on Windows: Total MEMORY difference: 58033974 / 58034193 [-0.00%] Total CPU difference: 18119.51614999857 / 17968.101579398684 [+0.84%] There are differences in images found by testdiff: http://occt-tests/CR28677-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR28677-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html bugs moddata_1 bug20823 bugs modalg_6 bug26481 |
|
Dear Nikolay, Branch CR28677 has been rejected due to: - differences in images |
2017-04-27 17:14 developer |
bugs modalg_6 bug26481.PNG (11,724 bytes) |
2017-04-27 17:15 developer |
bugs moddata_1 bug20823.PNG (13,332 bytes) |
|
New pictures respects the rule from bug description: "If we go along the wire, the material will be on the left side." It can be seen in attached pictures (name of pictures correspond to the name of test cases). In every picture, "vori" DRAW-command is applied to the source wire (in order to show its real orientation). As result, 1. bugs moddata_1 bug20823 New result of mkplane DRAW-command is correct. 2. bugs modalg_6 bug26481 Openoffset wit positive offset-value (+10.) is created in correct direction. --- So, found differences in images are not regressions and shall be applied. |
|
Looking at bug #26481, I would leave the picture as it is. It is better to invert sign of offset in the script. |
|
Branch CR28677_1 has been created by nbv. SHA-1: 96888be1bb6126d9540bc871b9af942bf9448f67 Detailed log of new commits: Author: nbv Date: Mon Apr 24 13:48:28 2017 +0300 0028677: Avoid change of wire orientation in BRepLib_MakeFace if the wire is open Method BRepLib_MakeFace::CheckInside() is not called for open wire. So, if the input wire is open its orientation is not changed in the result face. Documentation has been up-to-date. Correction of test cases |
|
Branch CR28677 has been updated by nbv. SHA-1: b2dbb1f33ad9fe9e06b69a5fd33f20b1da8cf8c9 Detailed log of new commits: Author: nbv Date: Thu Apr 27 17:56:26 2017 +0300 Correction of test case. |
|
Dear Mikhail, Please review the current state of CR28677 branch. ----- Dear BugMaster, Please use CR28677_1 branch for integration. Branches CR28677_1 and CR28677 differ by commit-message only. |
|
Reviewed. Alexey, test the only case bugs modalg_6 bug26481. No recompilation is needed. |
|
Test case bugs modalg_6 bug26481 has been retested with the following results: http://occt-tests/CR28677-master-OCCT/Debian70-64/bugs/modalg_6/bug26481.html http://occt-tests/CR28677-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug26481.html |
|
Just for remember: Dear BugMaster, Please use CR28677_1 branch for integration. Branches CR28677_1 and CR28677 differ by commit-message only. |
|
Branch CR28677_1 has been updated forcibly by nbv. SHA-1: 83bea504ca19da0c96fe487f67b836b9b13555b9 |
|
Branch CR28677 has been deleted by kgv. SHA-1: b2dbb1f33ad9fe9e06b69a5fd33f20b1da8cf8c9 |
|
Branch CR28677_1 has been deleted by kgv. SHA-1: 83bea504ca19da0c96fe487f67b836b9b13555b9 |
occt: master b608f6a5 2017-04-24 10:48:28
Committer: bugmaster Details Diff |
0028677: Avoid change of wire orientation in BRepLib_MakeFace if the wire is open Method BRepLib_MakeFace::CheckInside() is not called for open wire. So, if the input wire is open its orientation is not changed in the result face. |
Affected Issues 0028677 |
|
mod - dox/dev_guides/upgrade/upgrade.md | Diff File | ||
mod - src/BRepFill/BRepFill_OffsetWire.hxx | Diff File | ||
mod - src/BRepLib/BRepLib_MakeFace.cxx | Diff File | ||
mod - tests/bugs/modalg_5/bug25298_01 | Diff File | ||
mod - tests/bugs/modalg_5/bug25298_02 | Diff File | ||
mod - tests/bugs/modalg_5/bug25334_10 | Diff File | ||
mod - tests/bugs/modalg_5/bug25334_3 | Diff File | ||
mod - tests/bugs/modalg_5/bug25334_4 | Diff File | ||
mod - tests/bugs/modalg_5/bug25334_9 | Diff File | ||
mod - tests/bugs/modalg_6/bug26296_5 | Diff File | ||
mod - tests/bugs/modalg_6/bug26481 | Diff File | ||
mod - tests/bugs/modalg_6/bug6768 | Diff File | ||
mod - tests/offset/wire_unclosed_outside_0_005/B6 | Diff File | ||
mod - tests/offset/wire_unclosed_outside_0_025/B6 | Diff File | ||
mod - tests/offset/wire_unclosed_outside_0_075/A1 | Diff File | ||
mod - tests/offset/wire_unclosed_outside_0_075/B6 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-04-24 13:09 |
|
New Issue | |
2017-04-24 13:09 |
|
Assigned To | => msv |
2017-04-24 13:20 |
|
Assigned To | msv => nbv |
2017-04-24 13:20 |
|
Status | new => assigned |
2017-04-24 13:38 |
|
Summary | Avoid calling BRepLib_MakeFace::CheckInside() metfod when creation of face from open wire => Avoid change of wire orientation in BRepLib_MakeFace if the wire is open |
2017-04-24 13:38 |
|
Description Updated | |
2017-04-24 13:49 | git | Note Added: 0065468 | |
2017-04-24 13:50 |
|
Note Added: 0065469 | |
2017-04-24 13:50 |
|
Assigned To | nbv => msv |
2017-04-24 13:50 |
|
Status | assigned => resolved |
2017-04-24 13:59 | git | Note Added: 0065470 | |
2017-04-24 14:21 |
|
Note Added: 0065474 | |
2017-04-24 14:21 |
|
Assigned To | msv => bugmaster |
2017-04-24 14:21 |
|
Status | resolved => reviewed |
2017-04-24 14:27 |
|
Assigned To | bugmaster => apv |
2017-04-24 17:27 |
|
Test case number | => Not needed |
2017-04-25 14:17 |
|
Note Added: 0065503 | |
2017-04-25 14:17 |
|
Assigned To | apv => nbv |
2017-04-25 14:17 |
|
Status | reviewed => assigned |
2017-04-25 14:19 |
|
Note Added: 0065505 | |
2017-04-25 18:39 | git | Note Added: 0065525 | |
2017-04-25 18:40 |
|
Note Added: 0065526 | |
2017-04-25 18:40 |
|
Assigned To | nbv => msv |
2017-04-25 18:40 |
|
Status | assigned => resolved |
2017-04-26 11:57 | git | Note Added: 0065541 | |
2017-04-26 15:06 |
|
Note Added: 0065553 | |
2017-04-26 15:06 |
|
Assigned To | msv => bugmaster |
2017-04-26 15:06 |
|
Status | resolved => reviewed |
2017-04-26 15:32 |
|
Assigned To | bugmaster => apv |
2017-04-27 17:05 |
|
Note Added: 0065618 | |
2017-04-27 17:05 |
|
Assigned To | apv => nbv |
2017-04-27 17:05 |
|
Status | reviewed => assigned |
2017-04-27 17:06 |
|
Note Added: 0065619 | |
2017-04-27 17:14 |
|
File Added: bugs modalg_6 bug26481.PNG | |
2017-04-27 17:15 |
|
File Added: bugs moddata_1 bug20823.PNG | |
2017-04-27 17:25 |
|
Note Added: 0065621 | |
2017-04-27 17:26 |
|
Assigned To | nbv => msv |
2017-04-27 17:26 |
|
Status | assigned => resolved |
2017-04-27 17:36 |
|
Note Added: 0065623 | |
2017-04-27 17:36 |
|
Assigned To | msv => nbv |
2017-04-27 17:36 |
|
Status | resolved => assigned |
2017-04-27 17:36 |
|
Note Edited: 0065623 | |
2017-04-27 17:47 | git | Note Added: 0065625 | |
2017-04-27 17:48 |
|
Assigned To | nbv => msv |
2017-04-27 17:48 |
|
Status | assigned => resolved |
2017-04-27 17:57 | git | Note Added: 0065627 | |
2017-04-27 17:59 |
|
Note Added: 0065628 | |
2017-04-27 17:59 |
|
Note Edited: 0065628 | |
2017-04-27 18:02 |
|
Note Added: 0065629 | |
2017-04-27 18:02 |
|
Assigned To | msv => apv |
2017-04-27 18:02 |
|
Status | resolved => reviewed |
2017-04-28 13:28 |
|
Note Added: 0065639 | |
2017-04-28 13:28 |
|
Assigned To | apv => bugmaster |
2017-04-28 13:28 |
|
Status | reviewed => tested |
2017-04-28 13:28 |
|
Note Edited: 0065639 | |
2017-04-28 13:31 |
|
Note Added: 0065640 | |
2017-05-04 13:10 | git | Note Added: 0065748 | |
2017-05-05 13:34 | bugmaster | Changeset attached | => occt master b608f6a5 |
2017-05-05 13:34 | bugmaster | Status | tested => verified |
2017-05-05 13:34 | bugmaster | Resolution | open => fixed |
2017-05-12 11:36 | git | Note Added: 0065974 | |
2017-05-12 11:40 | git | Note Added: 0065980 | |
2017-09-29 16:19 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |
2021-08-18 19:36 | akaftasev | Relationship added | related to 0028684 |
2021-08-18 19:37 | akaftasev | Relationship deleted | related to 0028684 |