0028677: Avoid change of wire orientation in BRepLib_MakeFace if the wire is open

Method BRepLib_MakeFace::CheckInside() is not called for open wire. So, if the input wire is open its orientation is not changed in the result face.